truncate ConsistentSettingsIT